# azure-openai-test

./: B3_DecisionTree.ipynb  B4_Word2Vec.ipynb  hello.py  pyproject.toml  requirements.txt
